--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <script nomodule="" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
+    <div id="preloader"></div>
     <div class="landing-dots">
         <header class="container">
             <figure class="header-logo">
