DO-1649 Lang to cookie

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                         <span lang="uk">Увійти</span>
                         <span lang="en">Log in</span>
                     </button></li>
-                    <li><a id="signup" class="link btn-primary" href="https://dp.dataocean.us/auth/sign-up/">
+                    <li><a id="signup" class="link btn-primary">
                         <span lang="uk">Зареєструватись</span>
                         <span lang="en">Sign up</span>
                     </a></li>
@@ -211,7 +211,7 @@
                             <span class="api-documentation" lang="uk">Переглянути документацію API</span>
                             <span class="api-documentation" lang="en">View API documentation</span>
                         </a>
-                        <button id="api-button" class="btn-primary btn-primary_api">
+                        <button id="api-button" class="js-link-platform btn-primary btn-primary_api">
                             <span lang="uk">Спробувати безкоштовно</span>
                             <span lang="en">Try for free</span>
                         </button>
