--- a/src/index.html
+++ b/src/index.html
@@ -23,28 +23,38 @@
                     <ion-icon name="menu-outline"></ion-icon>
                 </label>
                 <ul>
-                    <li><a class="link link_start" href="#product">
-                        <span lang="uk">Про Data Platform</span>
-                        <span lang="en">About Data Platform</span>
-                    </a></li>
-                    <li><a class="link link_start" href="#about">
-                        <span lang="uk">Про нас</span>
-                        <span lang="en">About us</span>
-                    </a></li>
-                    <li><button id="login" class="btn-secondary">
-                        <span lang="uk">Увійти</span>
-                        <span lang="en">Log in</span>
-                    </button></li>
-                    <li><a id="signup" class="link btn-primary">
-                        <span lang="uk">Зареєструватись</span>
-                        <span lang="en">Sign up</span>
-                    </a></li>
-                    <li><button id="change-lang" class="link link_start select_lang">
-                        <img lang="en" src="img/ukraine_flag.svg">
-                        <span class="select_lang_span" lang="en">Українська</span>
-                        <img lang="uk" src="img/usa_flag.svg">
-                        <span class="select_lang_span" lang="uk">English</span>
-                    </button></li>
+                    <li>
+                        <a class="link link_start" href="#product">
+                            <span lang="uk">Про Data Platform</span>
+                            <span lang="en">About Data Platform</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link link_start" href="#about">
+                            <span lang="uk">Про нас</span>
+                            <span lang="en">About us</span>
+                        </a>
+                    </li>
+                    <li class="login">
+                        <button id="login" class="btn-secondary">
+                            <span lang="uk">Увійти</span>
+                            <span lang="en">Log in</span>
+                        </button>
+                    </li>
+                    <li>
+                        <a id="signup" class="link btn-primary">
+                            <span lang="uk">Зареєструватись</span>
+                            <span lang="en">Sign up</span>
+                        </a>
+                    </li>
+                    <li>
+                        <button id="change-lang" class="link link_start select_lang">
+                            <img lang="en" src="img/ukraine_flag.svg">
+                            <span class="select_lang_span" lang="en">Українська</span>
+                            <img lang="uk" src="img/usa_flag.svg">
+                            <span class="select_lang_span" lang="uk">English</span>
+                        </button>
+                    </li>
                 </ul>
             </nav>
         </header>
